[package]
name = "rucron"
version = "0.1.2"
edition = "2021"
authors = ["Ban Mengtao <jiuxie@outlook.com>"]
keywords = ["rust", "cron", "crontab", "scheduler"]
description = "A Rust Job Scheduling Crate."
license = "MIT"
repository = "https://github.com/goldwind-ting/rucron/"

[dependencies]
tokio = { version = "1.17.0", features = ["time", "full"] }
futures = "0.3.21"
lazy_static = "1.4.0"
signal-hook = "0.3.13"
chrono = "0.4.19"
http = "0.2.6"
async-trait = "0.1.53"
log = "0.4.16"
dashmap = "5.2.0"
thiserror = "1.0.30"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }

[dev-dependencies]
redis = "0.21.4"
rand = "0.8.4"

[[example]]
name = "redlocker"
path = "examples/redlocker.rs"
