[package]
name = "rucron"
version = "0.1.4"
edition = "2021"
authors = ["Ban Mengtao <jiuxie@outlook.com>"]
keywords = ["rust", "cron", "crontab", "scheduler"]
description = "A Rust Job Scheduling Crate."
license = "MIT"
repository = "https://github.com/goldwind-ting/rucron/"

[dependencies]
tokio = { version = "1.23.0", features = ["time", "full"] }
futures = "0.3.25"
lazy_static = "1.4.0"
signal-hook = "0.3.14"
chrono = "0.4.23"
http = "0.2.8"
async-trait = "0.1.60"
log = "0.4.17"
dashmap = "5.4.0"
thiserror = "1.0.38"
serde_json = "1.0.91"
serde = { version = "1.0.151", features = ["derive"] }
rayon = "1.6.1"

[dev-dependencies]
redis = "0.22.1"
fastrand = "1.8.0"

[[example]]
name = "redlocker"
path = "examples/redlocker.rs"
