[package]
name = "rucron"
version = "0.1.6"
edition = "2021"
authors = ["Ban Mengtao <jiuxie@outlook.com>"]
keywords = ["rust", "cron", "crontab", "scheduler"]
description = "A Rust Job Scheduling Crate."
license = "MIT"
repository = "https://github.com/goldwind-ting/rucron/"

[features]
default = ["tokio"]
tokio = ["dep:tokio"]
smol = ["dep:async-channel", "dep:async-lock", "dep:smol"]


[dependencies]
tokio = { version = "1.23.0", features = ["time", "full"], optional = true }
async-channel = { version = "1.8.0",  optional = true }
async-lock = { version = "2.6.0",  optional = true }
smol = { version = "1.3.0",  optional = true }
futures = "0.3.25"
lazy_static = "1.4.0"
signal-hook = "0.3.14"
chrono = "0.4.23"
http = "0.2.8"
async-trait = "0.1.60"
log = "0.4.17"
dashmap = "5.4.0"
thiserror = "1.0.38"
serde_json = "1.0.91"
serde = { version = "1.0.151", features = ["derive"] }
rayon = "1.6.1"
select-macro = "0.2.0"


[dev-dependencies]
redis = "0.22.1"
fastrand = "1.8.0"
tokio = { version = "1.23.0", features = ["time", "full"] }

[[example]]
name = "redlocker"
path = "examples/redlocker.rs"
